# Effective-CPP

./: CMakeLists.txt
EffectiveCpp/: CMakeLists.txt
EffectiveCpp/const_test/: TextBlock.cpp  TextBlock.hpp
EffectiveCpp/non_local_static_test/: Client.cpp  FileSystem.cpp  FileSystem.hpp
EffectiveCpp/swap/: StrongGuarantee.cpp  SwapTest.cpp
